--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,5 @@
 <h1>Hello, This is Where the Login Form Goes</h1>
 
-
-
 <% if @error %>
     <p><%= @error %></p>
 <% end %>
@@ -9,8 +7,8 @@
 <%# THE FORM BELOW MAKES A POST REQUEST TO "/send_the_form_here" %>
 
 <%= form_tag "/send_the_form_here" do %>
-    <%= label_tag :first_name %>
-    <%= text_field_tag :first_name %>
+    <%= label_tag :username %>
+    <%= text_field_tag :username %>
     <%= label_tag :password %>
     <%= password_field_tag :password %>
     <%= submit_tag "Login!" %>
