--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<h1> Add a new student! </h1>
+<h1> Add a new user! </h1>
 
 <% if @errors %>
   <% @errors.each do |error|%>
@@ -6,4 +6,4 @@
   <% end %>
 <% end %>
 
-<%= render "student_form" %>
+<%= render "user_form" %>
