--- a/app/views/users/_user_form.erb
+++ b/app/views/users/_user_form.erb
@@ -1,4 +1,4 @@
-<%= form_for @student do |f| %>
+<%= form_for @user do |f| %>
     <%= f.label :first_name %>
     <%= f.text_field :first_name %> <br/>
     <%= f.label :last_name %>
