--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,8 +9,8 @@
 <%# THE FORM BELOW MAKES A POST REQUEST TO "/send_the_form_here" %>
 
 <%= form_tag "/send_the_form_here" do %>
-    <%= label_tag :first_name %>
-    <%= text_field_tag :first_name %>
+    <%= label_tag :username %>
+    <%= text_field_tag :username %>
     <%= label_tag :password %>
     <%= password_field_tag :password %>
     <%= submit_tag "Login!" %>
