--- a/app/views/users/_user_form.erb
+++ b/app/views/users/_user_form.erb
@@ -1,10 +1,8 @@
 <%= form_for @user do |f| %>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %> <br/>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %><br/>
-    <%= f.label :age %>
-    <%= f.number_field :age %><br/>
+    <%= f.label :username %>
+    <%= f.text_field :username %> <br/>
+    <%= f.label :email %>
+    <%= f.text_field :email %><br/>
     <%= f.label :password %>
     <%= f.password_field :password %><br/>
     <%= f.submit "Ready!" %>
